ini-persist/tests/compile-fail/conflicting_load_fn.stderr
error: conflicting load function specified
 --> tests/compile-fail/conflicting_load_fn.rs:8:11
  |
8 |     #[ini(load_in_with = my_load_in)]
  |           ^^^^^^^^^^^^^^^^^^^^^^^^^

error: conflicting load function specified
  --> tests/compile-fail/conflicting_load_fn.rs:12:11
   |
12 |     #[ini(load_with = my_load)]
   |           ^^^^^^^^^^^^^^^^^^^

error: conflicting load function specified
  --> tests/compile-fail/conflicting_load_fn.rs:16:11
   |
16 |     #[ini(parse_with = my_parse)]
   |           ^^^^^^^^^^^^^^^^^^^^^
